<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="icon_mapview_text">Map View</string>
    <string name="icon_listview_text">List View</string>
    <string name="icon_workmates_text">Workmates</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="hungry">I\'m hungry!</string>
    <string name="available_workmates">Available workmates</string>

    <string name="error_not_connected">You must log in !</string>
    <string name="error_authentication_canceled">loging in canceled</string>
    <string name="error_no_internet">Check your internet connexion !</string>
    <string name="error_unknown_error">Unknown error has happened</string>
    <string name="connection_succeed">logged successfully !</string>
    <string name="disconnected">you are now disconnected !</string>

    <string name="info_no_email_found">No mail address</string>
    <string name="info_no_username_found">No username</string>

    <string name="facebook_application_id">258185523195399</string>
    <string name="fb_login_protocol_scheme">fb258185523195399</string>
    <string name="permission_rationale_message">Access to location is necessary to use MapView.</string>
    <string name="unknown_rating">Unknown</string>
    <string name="mesuremetre">m</string>
    <string name="opened">Opened</string>
    <string name="closed">Closed</string>
    <string name="is_joining">\u0020 is joining </string>
    <string name="avatar">avatar</string>
    <string name="address">address</string>
    <string name="opening_hours">opening_hours</string>
    <string name="restaurant_picture">restaurant_picture</string>
    <string name="button_to_choose_your_daily_restaurant">button to choose your daily restaurant</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="image_of_a_star_for_liked_restaurant">image of a star for liked restaurant</string>
    <string name="website">WEBSITE</string>
    <string name="like">LIKE</string>
    <string name="dislike">DISLIKE</string>
    <string name="call">CALL</string>
    <string name="permission_rationale_call">Go4lunch need this permission to use this fonctionnality</string>
    <string name="website_not_specified">Website not specified</string>
    <string name="call_error">Call Error</string>
    <string name="NC">N/C</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="login_obligation">You must login to use Go4lunch</string>
    <string name="not_chosen_yet">you haven\'t chosen yet !!!</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="choice_recorded">Choice Recorded !</string>
    <string name="unable_to_record_choice">Unable to record choice</string>
    <string name="choice_canceled">Choice Canceled !</string>
    <string name="unable_to_cancel_choice">Unable to cancel choice</string>
    <string name="tel" translatable="false">tel:</string>
    <string name="channel_name" translatable="false">notif_channel</string>
    <string name="channel_description" translatable="false">Notification when Lunch time has come</string>
    <string name="activate_notification_at_12_00">Activate Notification at 12:00</string>
    <string name="alarm_activated">Alarm activated</string>
    <string name="is_eating_at">\u0020 is eating at \u0020</string>
    <string name="not_decided_yet">\u0020 hasn\'t decided yet.</string>
    <string name="no_one_else_is_coming">No one else is coming</string>
    <string name="details_activity_back_button">details Activity back button</string>
    <string name="time_for_lunch">Time for Lunch at \u0020</string>
    <string name="workmates_joining">Workmates who join : \u0020</string>

</resources>